Revision history for {{$dist->name}}

{{$NEXT}}
- Update for Prometheus::Tiny 0.011 undef label value protection

0.026     2022-02-01 08:31:26+11:00 Australia/Melbourne
- Update for Prometheus::Tiny 0.010 undef value protection

0.025     2021-12-07 16:46:28+11:00 Australia/Melbourne
- Update for Prometheus::Tiny 0.009 default_labels support

0.024     2021-07-21 14:27:51+10:00 Australia/Melbourne
- Update for Prometheus::Tiny 0.008 enum support

0.023     2021-06-07 13:57:38+10:00 Australia/Melbourne
- Get compiling under 5.8 again

0.022     2021-06-04 10:48:12+10:00 Australia/Melbourne
- Ensure that a metric is not redeclared with different metadata
- Bump Prometheus::Tiny to 0.005 to ensure label values are escaped correctly
  (thanks Slaven Rezić!)

0.021     2021-04-14 16:33:51+10:00 Australia/Melbourne
- Add clear method, to remove metric values

0.020     2020-03-23 12:57:16+11:00 Australia/Melbourne
- Rewrite to use Hash::SharedMem for the backend

0.012     2020-03-19 14:35:01+11:00 Australia/Melbourne
- Disable SQLite synchronous writes, and note that the backing store is not
  intended to be persistent or durable.

0.011     2020-02-27 16:17:58+11:00 Australia/Melbourne
- Make it work under Perl < 5.24 again (no postderef)
- Add init_file option to recreate the underlying file at object construction.
- Make objects reusable across forks

0.010     2020-02-26 21:45:37+11:00 Australia/Melbourne
- Change to using SQLite for the backing store, fixing the situation where
  metrics could be lost if there were lots of them. Minor change to the
  constructor parameters, please check the docs.

0.002     2019-12-22 13:08:58+11:00 Australia/Melbourne
- Update for Prometheus::Tiny 0.004 internals changes, including timestamp and
  histogram support

0.001     2018-07-27 23:25:50+10:00 Australia/Melbourne