@@ -22,6 +22,7 @@ my %WriteMakefileArgs = (
     "Hash::SharedMem" => 0,
     "JSON::XS" => 0,
     "Prometheus::Tiny" => "0.011",
+    "Scalar::Util" => 0,
     "parent" => 0,
     "strict" => 0,
     "warnings" => 0
@@ -54,6 +55,7 @@ my %FallbackPrereqs = (
   "JSON::XS" => 0,
   "Plack::Test" => 0,
   "Prometheus::Tiny" => "0.011",
+  "Scalar::Util" => 0,
   "Test::Differences" => 0,
   "Test::Exception" => 0,
   "Test::More" => 0,
