@@ -12,7 +12,8 @@ use Hash::SharedMem qw(shash_open shash_get shash_set shash_cset shash_keys_arra
 use JSON::XS qw(encode_json decode_json);
 use File::Temp qw(tempdir);
 use File::Path qw(rmtree);
-use Carp qw(croak);
+use Carp qw(croak carp);
+use Scalar::Util qw(looks_like_number);
 
 sub new {
   my ($class, %args) = @_;
@@ -44,6 +45,11 @@ EOF
 sub set {
   my ($self, $name, $value, $labels, $timestamp) = @_;
 
+  unless (looks_like_number $value) {
+    carp "setting '$name' to non-numeric value, using 0 instead";
+    $value = 0;
+  }
+
   my $key = join('-', 'k', $name, $self->_format_labels($labels));
   shash_set($self->{_shash}, $key, encode_json([$value, $timestamp]));
 
@@ -52,6 +58,11 @@ sub set {
 
 sub add {
   my ($self, $name, $diff, $labels) = @_;
+
+  unless (looks_like_number $diff) {
+    carp "adjusting '$name' by non-numeric value, adding 0 instead";
+    $diff = 0;
+  }
 
   my $key = join('-', 'k', $name, $self->_format_labels($labels));
 
